--- a/code/starter-code/starter-code-2_4.ipynb
+++ b/code/starter-code/starter-code-2_4.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -49,16 +49,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "import gzip\n",
     "import dill\n",
     "\n",
-    "with gzip.open('../../../2.3-lab/assets/datasets/union.dill.gz') as fin:\n",
+    "with gzip.open('union.dill.gz') as fin:\n",
     "    union = dill.load(fin)"
    ]
   },
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -104,12 +104,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "#Takes my previous pipeline and adds logit to it\n",
+    "model = make_pipeline(union,\n",
+    "                      LogisticRegression())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -122,21 +129,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
+   "source": [
+    "model.fit(X_train,y_train)\n",
+    "y_pred = model.predict(X_test)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -152,12 +153,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Predicted Dead</th>\n",
+       "      <th>Predicted Survived</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Dead</th>\n",
+       "      <td>154</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Survived</th>\n",
+       "      <td>37</td>\n",
+       "      <td>83</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Predicted Dead  Predicted Survived\n",
+       "Dead                 154                  21\n",
+       "Survived              37                  83"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import confusion_matrix, classification_report\n",
+    "# This example from the solution code makes it much more clear how the labels of the \n",
+    "# rows/col can be assigned\n",
+    "\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "idx = ['Dead', 'Survived']\n",
+    "col = ['Predicted Dead', 'Predicted Survived']\n",
+    "cmdf = pd.DataFrame(cm, index=idx, columns=col)\n",
+    "cmdf\n",
+    "#print \"There are more False Negatives (83)\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.81      0.88      0.84       175\n",
+      "          1       0.80      0.69      0.74       120\n",
+      "\n",
+      "avg / total       0.80      0.80      0.80       295\n",
+      "\n",
+      "there are more FN because of the lower recall of survived\n"
+     ]
+    }
+   ],
+   "source": [
+    "report = classification_report(y_test, y_pred)\n",
+    "print report\n",
+    "print \"there are more FN because of the lower recall of survived\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -176,12 +254,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['featureunion__getdummiestransformer__columns',\n",
+       " 'featureunion__pipeline-1__standardscaler__copy',\n",
+       " 'featureunion__transformer_weights',\n",
+       " 'featureunion__pipeline-3__standardscaler__with_mean',\n",
+       " 'featureunion__pipeline-1__columnselector__columns',\n",
+       " 'logisticregression__dual',\n",
+       " 'featureunion',\n",
+       " 'featureunion__pipeline-3__standardscaler__with_std',\n",
+       " 'featureunion__transformer_list',\n",
+       " 'featureunion__pipeline-3__steps',\n",
+       " 'featureunion__pipeline-2__binarytransformer__flag',\n",
+       " 'logisticregression__multi_class',\n",
+       " 'featureunion__pipeline-2__columnselector',\n",
+       " 'logisticregression',\n",
+       " 'featureunion__pipeline-2__binarytransformer',\n",
+       " 'featureunion__pipeline-1__imputer__strategy',\n",
+       " 'logisticregression__random_state',\n",
+       " 'logisticregression__verbose',\n",
+       " 'featureunion__pipeline-1__standardscaler__with_std',\n",
+       " 'featureunion__pipeline-1__standardscaler',\n",
+       " 'featureunion__pipeline-1__steps',\n",
+       " 'logisticregression__class_weight',\n",
+       " 'logisticregression__intercept_scaling',\n",
+       " 'featureunion__pipeline-1__standardscaler__with_mean',\n",
+       " 'logisticregression__n_jobs',\n",
+       " 'featureunion__pipeline-2__columnselector__columns',\n",
+       " 'logisticregression__max_iter',\n",
+       " 'featureunion__pipeline-1',\n",
+       " 'featureunion__pipeline-2',\n",
+       " 'featureunion__pipeline-3',\n",
+       " 'featureunion__n_jobs',\n",
+       " 'featureunion__pipeline-1__imputer__copy',\n",
+       " 'featureunion__pipeline-2__steps',\n",
+       " 'logisticregression__warm_start',\n",
+       " 'logisticregression__solver',\n",
+       " 'logisticregression__fit_intercept',\n",
+       " 'featureunion__pipeline-1__imputer__verbose',\n",
+       " 'featureunion__pipeline-3__columnselector__columns',\n",
+       " 'logisticregression__penalty',\n",
+       " 'featureunion__pipeline-1__columnselector',\n",
+       " 'logisticregression__C',\n",
+       " 'featureunion__pipeline-3__standardscaler__copy',\n",
+       " 'featureunion__pipeline-1__imputer__axis',\n",
+       " 'featureunion__pipeline-1__imputer__missing_values',\n",
+       " 'featureunion__pipeline-1__imputer',\n",
+       " 'featureunion__getdummiestransformer',\n",
+       " 'steps',\n",
+       " 'featureunion__pipeline-3__columnselector',\n",
+       " 'logisticregression__tol',\n",
+       " 'featureunion__pipeline-3__standardscaler']"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.get_params().keys()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -195,12 +335,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.grid_search import GridSearchCV\n",
+    "#probably change the C val\n",
+    "param_grid = {\"logisticregression__C\":[0.01,0.02,0.03,0.05,\n",
+    "                                                          0.1,0.2,0.3,0.5,\n",
+    "                                                          1.0,2.0,3.0,5.0,\n",
+    "                                                          10.0,20.0,30.0,50.0]}\n",
+    "classifier = GridSearchCV(model,\n",
+    "                   param_grid)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -218,12 +368,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "======== BEFORE TUNING ========\n",
+      "          Predicted Dead  Predicted Survived\n",
+      "Dead                 154                  21\n",
+      "Survived              37                  83\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.81      0.88      0.84       175\n",
+      "          1       0.80      0.69      0.74       120\n",
+      "\n",
+      "avg / total       0.80      0.80      0.80       295\n",
+      "\n",
+      "\n",
+      "\n",
+      "======== AFTER TUNING ========\n",
+      "          Predicted Dead  Predicted Survived\n",
+      "Dead                 154                  21\n",
+      "Survived              36                  84\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0       0.81      0.88      0.84       175\n",
+      "          1       0.80      0.70      0.75       120\n",
+      "\n",
+      "avg / total       0.81      0.81      0.80       295\n",
+      "\n",
+      "\n",
+      "\n",
+      "It is very close to the old one.\n",
+      "We could try different regularization, or improve the imputation of the Age column.\n"
+     ]
+    }
+   ],
+   "source": [
+    "classifier.fit(X_train, y_train)\n",
+    "\n",
+    "best_c = classifier.best_params_\n",
+    "#classifier.best_estimator_\n",
+    "\n",
+    "y_pred2 = classifier.best_estimator_.predict(X_test)\n",
+    "\n",
+    "cm2 = confusion_matrix(y_test, y_pred2)\n",
+    "idx = ['Dead', 'Survived']\n",
+    "col = ['Predicted Dead', 'Predicted Survived']\n",
+    "\n",
+    "cmdf2 = pd.DataFrame(cm2, index=idx, columns=col)\n",
+    "print \"======== BEFORE TUNING ========\"\n",
+    "print cmdf\n",
+    "print report\n",
+    "print \"\\n\"\n",
+    "\n",
+    "print \"======== AFTER TUNING ========\"\n",
+    "print cmdf2\n",
+    "print classification_report(y_test, y_pred2)\n",
+    "print \"\\n\"\n",
+    "print \"It is very close to the old one.\"\n",
+    "print \"We could try different regularization, or improve the imputation of the Age column.\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -246,8 +455,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -261,7 +471,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
